doc/v2.0/_sources/reference/generated/ak.count_nonzero.rst.txt
ak.count_nonzero
----------------

.. py:module: ak.count_nonzero

Defined in `awkward.operations.ak_count_nonzero <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_count_nonzero.py>`__ on `line 10 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_count_nonzero.py#L10>`__.

.. py:function:: ak.count_nonzero(array, axis=None, *, keepdims=False, mask_identity=False, flatten_records=unset, highlevel=True, behavior=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc.
    :type axis: None or int
    :param keepdims: If False, this reducer decreases the number of
                 dimensions by 1; if True, the reduced values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, reducing over empty lists results in
                      None (an option type); otherwise, reducing over empty lists
                      results in the operation's identity.
    :type mask_identity: bool
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict

Counts nonzero elements of ``array`` (many types supported, including all
Awkward Arrays and Records). The identity of counting is ``0`` and it is
usually not masked. This operation is the same as NumPy's
`count_nonzero <https://docs.scipy.org/doc/numpy/reference/generated/numpy.count_nonzero.html>`__
if all lists at a given dimension have the same length and no None values,
but it generalizes to cases where they do not.

See :py:obj:`ak.sum` for a more complete description of nested list and missing
value (None) handling in reducers.

Following the same rules as other reducers, :py:obj:`ak.count_nonzero` does not
count None values. If it is desirable to count them, use :py:obj:`ak.fill_none`
to turn them into something that would be counted.

